--- a/scores/scores.css
+++ b/scores/scores.css
@@ -3,11 +3,9 @@ table, th, td {
   }
 
 table {
-    margin-left: auto;
-    margin-right: auto;
+
     border-spacing: 20px;
     background-color: #4086AA;
     color: white;
     font-family: "Copperplate";
-  }
-
+}
